--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,9 @@ jobs:
             npm install gh-pages --save-dev
             git config user.email "demchuk798@gmail.com"
             git config user.name "VitaliyDemchuk"
+      - add_ssh_keys:
+          fingerprints:
+            - "98:e0:7a:d6:cf:0a:9e:aa:fd:36:ed:c6:26:8b:f6:02"
       - run:
           name: Deploy docs to gh-pages branch
           command: './node_modules/.bin/gh-pages --dotfiles --message "[skip ci] Updates" -d dist'
