upd: cicrle ci conf

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,9 @@ jobs:
           name: build-project
           command: npm run generate:gh-pages-custom-domain
       - run:
+          name: create-cname
+          command: echo "learnitnow.ru" > CNAME;
+      - run:
           name: Install and configure dependencies
           command: |
             npm install gh-pages --save-dev
